# freertos-in-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  RUST_WRAPPER.md
.github/workflows/: ci.yml
demo/cortex-a53/: Cargo.toml  link.x
demo/cortex-a53/.cargo/: config.toml
demo/cortex-a53/src/: main.rs
demo/cortex-a9/: Cargo.toml  build.rs  link.x
demo/cortex-a9/.cargo/: config.toml
demo/cortex-a9/src/: main.rs  startup.S
demo/cortex-m0/: Cargo.toml  memory.x
demo/cortex-m0/src/: main.rs
demo/cortex-m3/: Cargo.toml  memory.x
demo/cortex-m3/.cargo/: config.toml
demo/cortex-m4f/: Cargo.toml  build.rs  memory.x
demo/cortex-m4f/.cargo/: config.toml
demo/cortex-m4f/src/: main.rs
demo/riscv32/: Cargo.toml  memory.x
demo/riscv32/src/: main.rs
src/: config.rs  lib.rs  trace.rs  types.rs
src/kernel/: event_groups.rs  list.rs  mod.rs  queue.rs  stream_buffer.rs  tasks.rs  timers.rs
src/memory/: heap_4.rs  heap_5.rs  mod.rs
src/port/: cortex_a53.rs  cortex_a9.rs  cortex_m0.rs  cortex_m3.rs  cortex_m4f.rs  cortex_m7.rs  dummy.rs  mod.rs  riscv32.rs
src/sync/: event_group.rs  message_buffer.rs  mod.rs  mutex.rs  queue.rs  semaphore.rs  stream_buffer.rs  task.rs  timer.rs
