[package]
name = "freertos-demo"
version = "0.1.0"
edition = "2021"
authors = ["FreeRusTOS Contributors"]
description = "Demo application for FreeRusTOS on Cortex-M4F"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
# The FreeRTOS kernel
freertos-in-rust = { path = "../..", features = [
    "port-cortex-m4f",
    "alloc",
    "use-mutexes",
    "timers",
    "task-delete",
    "task-suspend",
    "thread-local-storage",
    "application-task-tag",
    "stack-high-water-mark",
    "task-priority-set",
    "abort-delay",
    "queue-sets",
    "trace-facility",
    "stats-formatting",
] }

# Cortex-M support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Semihosting for debug output (works with any debugger)
cortex-m-semihosting = "0.5"

# Panic handler - outputs panic message via semihosting
panic-semihosting = { version = "0.6", features = ["exit"] }

# For heap allocation
embedded-alloc = "0.6"

[profile.dev]
opt-level = "s"      # Optimize for size even in dev (embedded)
debug = true
lto = false

[profile.release]
opt-level = "s"      # Optimize for size
debug = true         # Keep debug info for easier debugging
lto = true
