[package]
name = "freertos-demo"
version = "0.1.0"
edition = "2021"
authors = ["FreeRusTOS Contributors"]
description = "Demo application for FreeRusTOS on Cortex-M4F"

[[bin]]
name = "demo"
path = "src/main.rs"

[features]
default = ["use-heap-4"]
# Use FreeRTOS heap_4 (first-fit with coalescing) - recommended
use-heap-4 = ["freertos-in-rust/heap-4"]
# Use external allocator (embedded-alloc)
use-embedded-alloc = ["freertos-in-rust/alloc", "dep:embedded-alloc"]

[dependencies]
# The FreeRTOS kernel
freertos-in-rust = { path = "../..", features = [
    "port-cortex-m4f",
    "use-mutexes",
    "timers",
    "task-delete",
    "task-suspend",
    "thread-local-storage",
    "application-task-tag",
    "stack-high-water-mark",
    "task-priority-set",
    "abort-delay",
    "queue-sets",
    "queue-registry",
    "trace-facility",
    "stats-formatting",
    "stream-buffers",
    "generate-run-time-stats",
    "tickless-idle",
] }

# External allocator (optional, for use-embedded-alloc feature)
embedded-alloc = { version = "0.6", optional = true }

# Cortex-M support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Semihosting for debug output (works with any debugger)
cortex-m-semihosting = "0.5"

# Panic handler - outputs panic message via semihosting
panic-semihosting = { version = "0.6", features = ["exit"] }

[profile.dev]
opt-level = "s"      # Optimize for size even in dev (embedded)
debug = true
lto = false

[profile.release]
opt-level = "s"      # Optimize for size
debug = true         # Keep debug info for easier debugging
lto = true
